# claw

./: .mcp.json  CLAUDE.md  Cargo.toml  DESIGN.md  FORGING.md  README.md  install  install-local.sh
.github/workflows/: ci.yml  release.yml
adapters/36kr/: hot.yaml
adapters/_templates/: intercept.yaml  read-api.yaml  read-browser.yaml  write-ui.yaml
adapters/baidu/: hot.yaml
adapters/bilibili/: hot.yaml
adapters/bluesky/: trending.yaml
adapters/coingecko/: top.yaml
adapters/crates/: popular.yaml
adapters/demo/: interact.yaml
adapters/devto/: top.yaml
adapters/dictionary/: search.yaml
adapters/douban/: hot.yaml
adapters/douyin/: hot.yaml  search.yaml
adapters/facebook/: feed.yaml
adapters/github/: trending.yaml
adapters/google/: trends.yaml
adapters/hackernews/: hot.yaml
adapters/instagram/: explore.yaml
adapters/jimeng/: generate.yaml  history.yaml
adapters/juejin/: hot.yaml
adapters/lobsters/: hot.yaml
adapters/obsidian/: notes.yaml
adapters/pixiv/: ranking.yaml
adapters/producthunt/: hot.yaml
adapters/proxy/: collect.yaml
adapters/pypi/: top.yaml
adapters/reddit/: hot.yaml
adapters/sspai/: hot.yaml
adapters/stackoverflow/: hot.yaml
adapters/steam/: top-sellers.yaml
adapters/telegraph/: publish.yaml
adapters/tiktok/: trending.yaml
adapters/toutiao/: hot.yaml
adapters/trending/: scan.yaml
adapters/v2ex/: hot.yaml
adapters/weibo/: hot.yaml  search.yaml
adapters/wikipedia/: most-read.yaml
extension/: background.js  manifest.json  popup.html  popup.js
extension-v2/: background.js  content-script.js  manifest.json  popup.html  popup.js  results.html  results.js  sandbox.html  sandbox.js
src/: adapter.rs  bridge.rs  browser.rs  cdp.rs  health.rs  lua_adapter.rs  main.rs  mcp.rs  output.rs  pipeline.rs  sync.rs  template.rs
(+60 files in other folders)
