[package]
name = "claw"
version = "0.1.0"
edition = "2021"
description = "Turn any website into a CLI — with native browser precision"
license = "MIT"
repository = "https://github.com/LeonTing1010/claw"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.5"
serde_yml = "0.0.12"
regex = "1.12"
tabled = "0.20"
futures-util = "0.3.32"
base64 = "0.22.1"
