[package]
name = "claw"
version = "2.0.0"
edition = "2021"
description = "Make every website programmable by AI"
license = "MIT"
repository = "https://github.com/LeonTing1010/claw"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.5"
serde_yml = "0.0.12"
regex = "1.12"
tabled = "0.20"
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["json"] }
